--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isotropy-memdb",
+  "name": "isotropy-redis",
   "version": "0.0.1",
   "author": "Isotropy Team<isotropy@agilehead.com>",
   "contributors": [
@@ -10,7 +10,7 @@
     "test": "mocha dist/test/test.js",
     "debug": "mocha dist/test/test.js --debug-brk"
   },
-  "main": "dist/isotropy-memdb.js",
+  "main": "dist/isotropy-redis.js",
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.22.1",
